--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<div class="inner">
 						<header>
 							<h1 class="move"> GODWIN DEV AMEH  Programing Courses</h1>
-							<p  class="learn move"> learn the basic of Programing languages here </p>
+							<p  class="learn d" id="dp"> learn the basic of Programing languages here </p>
 						</header>
 				
 						<a href="#main" class="more  move">Learn More</a>
@@ -276,7 +276,7 @@
 
 <center>
 	<br><br><br><br>
-	<a  class="but" href="https://paystack.shop/godwin-digital-store" target="_blank" > Godwin store, click here to go! </a> 
+	<a  class="but" href="https://paystack.shop/godwin-digital-store" target="_blank"> Godwin store <span id="cp"> click here to shop now!</span></a> 
 	<br></br><br>
 </center>
 			<br><br>
