--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" type="text/css" href="assets/css/themify-icons.css">
 		<link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
+		<script async="async" data-cfasync="false" src="//thubanoa.com/1?z=7409227"></script>
 	</head>
+	
 
 	<body id="top">
 			<!-- Banner -->
